--- a/META.yml
+++ b/META.yml
@@ -1,29 +1,21 @@
----
-abstract: 'PSGI handler for HTTP::Server::Simple'
-author:
-  - 'Tokuhiro Matsuno'
-build_requires:
-  ExtUtils::MakeMaker: 6.42
-  Test::More: 0
-  Test::Requires: 0
+--- #YAML:1.0
+name:               HTTP-Server-Simple-PSGI
+version:            0.13
+abstract:           ~
+author:  []
+license:            unknown
+distribution_type:  module
 configure_requires:
-  ExtUtils::MakeMaker: 6.42
-distribution_type: module
-generated_by: 'Module::Install version 0.92'
-license: perl
-meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
-name: HTTP-Server-Simple-PSGI
-no_index:
-  directory:
-    - inc
-    - t
-    - xt
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
 requires:
-  HTTP::Server::Simple: 0.41
-  perl: 5.8.1
-resources:
-  license: http://dev.perl.org/licenses/
-  repository: git://github.com/miyagawa/HTTP-Server-Simple-PSGI.git
-version: 0.12
+    HTTP::Server::Simple:  0.41
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.54
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
