--- a/META.yml
+++ b/META.yml
@@ -1,21 +1,31 @@
---- #YAML:1.0
-name:               HTTP-Server-Simple-PSGI
-version:            0.14
-abstract:           ~
-author:  []
-license:            unknown
-distribution_type:  module
+---
+abstract: 'PSGI handler for HTTP::Server::Simple'
+author:
+  - 'Tokuhiro Matsuno'
+build_requires: {}
 configure_requires:
-    ExtUtils::MakeMaker:  0
-build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    HTTP::Server::Simple:  0.42
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.54
+  ExtUtils::MakeMaker: 6.30
+dynamic_config: 0
+generated_by: 'Dist::Milla version v1.0.3, Dist::Zilla version 4.300035, CPAN::Meta::Converter version 2.132140'
+license: perl
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: HTTP-Server-Simple-PSGI
+no_index:
+  directory:
+    - t
+    - xt
+    - inc
+    - share
+    - eg
+    - examples
+requires:
+  HTTP::Server::Simple: 0.42
+resources:
+  bugtracker: https://github.com/miyagawa/HTTP-Server-Simple-PSGI/issues
+  homepage: https://github.com/miyagawa/HTTP-Server-Simple-PSGI
+  repository: https://github.com/miyagawa/HTTP-Server-Simple-PSGI.git
+version: 0.15
+x_contributors:
+  - 'Florian Ragwitz <rafl@debian.org>'
